# nucleus

./: Makefile  README.md  main.py  pyproject.toml
apps/core/auth-service/: .env  .env.example  ALEMBIC_GUIDE.md  DATABASE_SETUP.md  Dockerfile  Makefile  alembic.ini  manage.py  migrate.py  pyproject.toml  requirements.txt
apps/core/auth-service/alembic/: env.py
apps/core/auth-service/alembic/versions/: c5730f3adc43_add_user_schema.py  f19cab6e22ea_initial_migration_with_authorization_.py
apps/core/auth-service/app/: api.txt  database.py  db_utils.py  main.py  migrations.py
apps/core/auth-service/app/api/: authorize.py  jwks.py  login.py  oidc.py  router.py  signup.py  token.py
apps/core/auth-service/app/config/: settings.py
apps/core/auth-service/app/keys/: private.pem  public.pem
apps/core/auth-service/app/models/: __init__.py  oauth.py  user.py
apps/core/auth-service/app/oauth/: helper.py
apps/core/auth-service/app/oidc/: userinfo.py  verify.py
apps/core/auth-service/app/schemas/: signup.py
apps/core/auth-service/app/security/: password.py  session.py
infra/k8s/base/: namespace.yml  postgres-secret.yaml
infra/k8s/services/auth-service/: deployment.yaml  deployment.yml
infra/k8s/services/database/: deployment.yaml  service.yaml
proto/auth/: auth.proto
