[project]
name = "auth-service"
version = "0.1.0"
description = "Auth Service for account management and organisation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "cryptography>=46.0.3",
    "fastapi[all,standard]>=0.127.1",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.31",
]
